# MTTY

./: .gitignore  .swo  .swp  Cargo.toml  README.md  completions-jj.nu  config.example.toml  config.toml  default.nix  default_6982855233557900349_0_14194.profraw  flake.nix  new  shell.nix  tarpaulin-report.html  test.rs  xterm-mtty.info
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: bgl6ldj5ihbwcq8p42z3a0qzgqafgk2b-source  cn07f0vk39mmx22jhvlcik56gf3gfpjs-source  d4xgrk22bw1mlpmvnqs5kviis44990px-source  f30hy2l0bi757l294q2k7pcj6zxclw52-source  n8q53ymk5rmjbmd12d66kzmhabvfpyhc-source  sbqh8vh46vc92ds54d9sin2aapvy4vmr-source  x3y587gybm6rxnyrjz90b62xqm9vsrqd-source
assets/: Icon.icns
examples/: config.toml
examples/config/: config.toml
examples/long_running_program/: Cargo.toml
examples/long_running_program/src/: main.rs
examples/scrolling/: Cargo.toml
examples/scrolling/src/: main.rs
src/: animal.rs  app.rs  backend.rs  commands.rs  config.rs  fonts.rs  frontend.rs  graphics.rs  grid.rs  main.rs  recording.rs  renderer.rs  sdl2frontend.rs  snapshot.rs  statemachine.rs  styles.rs  term.rs  ui.rs
src/graphics/: app.rs  lib.rs  shader.wgsl  state.rs  window.rs
src/grid/: tests.rs
src/ui/: tests.rs
