[package]
name = "MTTY"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "24.0"
glyphon = "0.8"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
nix = { version = "0.29.0", features = ["term", "process", "fs", "poll"] }
rustix = { version = "1.0.2", features = ["termios"] }
rustix-openpty = "0.2.0"
tokio = { version = "1.44.1", features = ["full", "sync"] }
vte = { version = "0.15.0", default-features = false, features = ["std", "ansi"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"

[package.metadata.bundle]
name = "MTTY"
identifier = "com.misaelaguayo.mtty"
icon = ["assets/Icon.icns"]
